# LifeOps

./: .env.example  .gitignore  .railway.json  CLAUDE.md  README.md  fly.toml  pyproject.toml  railway.toml  setup.sh  setup_wizard.py
.claude/: settings.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: auth.py  main.py
apps/api/src/api/routes/: dashboard_api.py  digest.py  inbox.py  pvi.py  replay.py  sync.py  tasks.py
apps/api/src/api/templates/: base.html  dashboard.html  inbox.html  tasks.html
apps/bot/: Dockerfile  pyproject.toml
apps/web/: README.md
apps/worker/: Dockerfile  pyproject.toml
docs/: FEATURES.md  deployment.md  guiding-docs-1.md  guiding-docs.md
docs/plans/: 2026-03-01-clawdbot-lifeops-mvp.md  2026-03-02-clawdbot-phase2.md  2026-03-02-clawdbot-phase3.md  2026-03-02-t3-telegram-bot.md  2026-03-02-t6-t7-design.md  2026-03-02-t6-t7-health-resilience.md  2026-03-03-t1-setup.md  2026-03-03-t10-deployment.md  2026-03-03-t2-docker-compose.md  2026-03-03-t4-email-reply.md  2026-03-03-t5-canvas-push.md  2026-03-03-t8-multi-user.md  2026-03-03-t9-web-dashboard.md  2026-03-04-clawdbot-phase4.md
infra/: Dockerfile.migrate  alembic.ini  docker-compose.yml
infra/alembic/: env.py
tests/: conftest.py
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_bot_callbacks.py  test_bot_keyboards.py  test_bot_main.py  test_canvas_notify.py  test_canvas_parser.py  test_circuit_breaker.py  test_dashboard_api.py  test_dashboard_auth.py  test_dedup.py  test_focus_mode.py  test_gcal_poller.py  test_gmail_history_poller.py  (+15 more)
(+9 files in other folders)
