[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "core",
    "connectors",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
